--- a/themes/custom.css
+++ b/themes/custom.css
@@ -25,3 +25,11 @@
 .header-top{
 	padding-top:20px;
 	}
+	
+img{
+	max-width: 100%; 
+	display:block; 
+	height: auto;
+	margin-left: auto;
+    margin-right: auto 
+	}
