--- a/themes/custom.css
+++ b/themes/custom.css
@@ -7,15 +7,26 @@
 	}
 
 .login-content{
-	
-	padding:10%;
-	top:10%;
-	position:absolute;
-	width:80%;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width:400px;
 	background-color: transparent;
 	
 	}
 	
+@media screen and (max-width: 480px) {
+   .login-content{
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width:80%;
+	background-color: transparent;
+	
+	}
+}
 
 .login-page{
 	background:
