--- a/themes/custom.css
+++ b/themes/custom.css
@@ -7,10 +7,12 @@
 	}
 
 .login-content{
-	position: fixed;
+	position:fixed;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 	width:400px;
 	background-color: transparent;
 	
@@ -22,6 +24,8 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 	width:80%;
 	background-color: transparent;
 	
@@ -64,4 +68,6 @@ img{
 	}
 #single-content{
 	margin-bottom:50px;
+	pointer-events: none;
+   	cursor: default;
 	}
